# sklearn-api-deploy

./: .gitignore  README.md  build-diffs.sh  incremental-diff.sh  pyproject.toml
.github/workflows/: ci.yaml
api/: main.py  pydantic_models.py
app-section-1/: README.md  requirements.txt
app-section-2/: README.md  requirements.txt  setup.cfg
app-section-2/app/: main.py
app-section-2/app/models/: iris_regression.pickle
app-section-2/tests/: conftest.py  test_app.py
app-section-3/app/: main.py  pydantic_models.py
app-section-3/tests/: conftest.py  test_app.py
app-section-4/: README.md  pyproject.toml  requirements.txt
app-section-4/app/: main.py  pydantic_models.py
app-section-4/tests/: test_app.py
diffs/: 1.html  2.html  3.html  4.html
notebooks/: model.ipynb  train_model.ipynb
tests/: conftest.py
