[project]
name = "app"
version = "0.1.0"
description = "An API server to predict flower species"
authors = [
    { name = "Ethan Swan", email = "ethanpswan@gmail.com"}
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["app"]
