[project]
name = "app"
version = "0.1.0"
description = "An API server to predict flower species"
authors = [
    { name = "Ethan Swan", email = "ethanpswan@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "anyio==3.6.2",
    "attrs==22.2.0",
    "black==23.3.0",
    "certifi==2022.12.7",
    "click==8.1.3",
    "colorama==0.4.6",
    "exceptiongroup==1.1.1",
    "fastapi==0.88.0",
    "h11==0.14.0",
    "httpcore==0.16.3",
    "httptools==0.5.0",
    "httpx==0.23.3",
    "idna==3.4",
    "iniconfig==2.0.0",
    "joblib==1.2.0",
    "mypy-extensions==1.0.0",
    "numpy==1.24.2",
    "packaging==23.0",
    "pandas==1.5.3",
    "pathspec==0.11.1",
    "platformdirs==3.2.0",
    "pluggy==1.0.0",
    "pydantic==1.10.7",
    "pytest==7.2.2",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "pytz==2023.3",
    "pyyaml==6.0",
    "rfc3986[idna2008]==1.5.0",
    "scikit-learn==1.2.2",
    "scipy==1.9.3",
    "six==1.16.0",
    "sniffio==1.3.0",
    "starlette==0.22.0",
    "threadpoolctl==3.1.0",
    "tomli==2.0.1",
    "typing-extensions==4.5.0",
    "uvicorn[standard]==0.20.0",
    "watchfiles==0.19.0",
    "websockets==11.0",
]


[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["app"]
